--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Arekta Agency</title>
   </head>
-  <!--
-    developed by: MD NAYEEM HOSSAIN
-    CTO, Arekta Agency
-    Email: nayeemhossain.nh094@gmail.com
-    phone: +8801754250940
-  -->
+
   <body>
   <section class="top">
         <div>
@@ -165,7 +160,7 @@
     <a href=""><img src="images/linkedin.png"></a>
       </div>
       <footer>
-        <p style="font-family:Poppins;font-size:13px;color:white;text-align:center">All Rights Received @ Arektaagence | 2020</p>
+        <p style="font-family:Poppins;font-size:13px;color:white;text-align:center">All Rights Received @ Arektaagency | 2020</p>
       </footer> 
 </section>
   
