--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Arekta Agency</title>
   </head>
-
+  <!--
+    developed by: MD NAYEEM HOSSAIN
+    CTO, Arekta Agency
+    Email: nayeemhossain.nh094@gmail.com
+    phone: +8801754250940
+  -->
   <body>
   <section class="top">
         <div>
@@ -34,24 +39,24 @@
 
 <!--work-->
     <section id="wk" class="work">
-      <h1 style="font-family:Poppins;font-size:27px;color:#FF9100;text-align:center;padding-top:3%">Our Work</h1>
+      <h1 style="font-family:Poppins;font-size:29px;color:#FF9100;text-align:center;padding-top:3%">Our Work</h1>
       <div class="width">
        <img src="images/Our Work/Content.jpg">
-       <P style="font-family:Poppins;color:white;font-size:14px">We have a diverse Digital Marketing team, with extesive knowdledge of core idea and concepts. We have also worked for several projects within last 6 months.</P>
+       <P style="font-family:Poppins;color:#FF9100;font-size:22px;text-align:center">Contents</P>
       </div>
       <div class="width">
         <img src="images/Our Work/Videos.jpg">
-        <P style="font-family:Poppins;color:white;font-size:14px">We have a diverse Digital Marketing team, with extesive knowdledge of core idea and concepts. We have also worked for several projects within last 6 months.</P>
+        <P style="font-family:Poppins;color:#FF9100;font-size:22px;text-align:center">Videos</P>
       </div>
       <div class="width">
         <img src="images/Our Work/pngtree-web-development-illustration-modern-can-be-used-for-landing-pages-web-png-image_1496220.jpg">
-        <P style="font-family:Poppins;color:white;font-size:14px">We have a diverse Digital Marketing team, with extesive knowdledge of core idea and concepts. We have also worked for several projects within last 6 months.</P>
+        <P style="font-family:Poppins;color:#FF9100;font-size:22px;text-align:center">Websites</P>
       </div>
     </section>
 
     <!--Clients-->
 <section id="cl" class="ct">
-  <h1 style="font-family:Poppins;font-size:27px;color: black;text-align:center;padding-top:3%">Clients</h1>
+  <h1 style="font-family:Poppins;font-size:27px;color: blue;text-align:center;padding-top:3%">Clients</h1>
   <div class="width">
    <img src="images/clients/Airpedia Black PNG.png">
   </div>
@@ -69,19 +74,19 @@
 
 <!--What we Do-->
 <section id="ww" class="wd">
-  <h1 style="font-family:Poppins;font-size:27px;color: #FF9100;text-align:center;padding-top:3%">What We DO?</h1>
+  <h1 style="font-family:Poppins;font-size:24px;color: #FF9100;text-align:center;padding-top:3%">What We DO?</h1>
       <div class="width">
        <img src="images/What We Do/1. Wed Development & Design.jpg">
       </div>
        <div class="width">
-       <P style="font-family:Poppins;color:#FF9100;font-size:14px;">Web Development: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+       <P style="font-family:Poppins;color:#FF9100;font-size:32px;font-weight:bold;padding-top:18%">Web Development & Design</P>
       </div>
     </section>
 
 
     <section  class="wd1">
       <div class="width">
-        <P style="font-family:Poppins;color:black;font-size:14px">Video Production: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+        <P style="font-family:Poppins;color:black;font-size:32px;padding-left:20%;font-weight:bold;padding-top:18%">Video Production</P>
        </div>
       <div class="width">
         <img src="images/What We Do/2. Video Production.jpg">
@@ -94,13 +99,13 @@
         <img src="images/What We Do/3. Digital Marketing.jpg">
       </div>
       <div class="width">
-        <P style="font-family:Poppins;color:#FF9100;font-size:14px">Digital Marketing: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+        <P style="font-family:Poppins;color:#FF9100;font-size:32px;font-weight:bold;padding-top:35%">Digital Marketing</P>
        </div>
          </section>
 
 <section class="wd3">
   <div class="width">
-    <P style="font-family:Poppins;color:black;font-size:14px">Animation: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+    <P style="font-family:Poppins;color:black;font-size:32px;padding-left:32%;font-weight:bold;padding-top:30%">Animation</P>
    </div>
   <div class="width">
   <img src="images/What We Do/4. Animation.jpg">
@@ -112,13 +117,13 @@
   <img src="images/What We Do/5. Brand Identity.jpg">
 </div>
 <div class="width">
-  <P style="font-family:Poppins;color:#FF9100;font-size:14px">Banding: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+  <P style="font-family:Poppins;color:#FF9100;font-size:32px;font-weight:bold;padding-top:22%">Band Identity & Guideline</P>
  </div>
 </section>
 
 <section class="wd5">
   <div class="width">
-    <P style="font-family:Poppins;color:#FF9100;font-size:14px">Game Development: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+    <P style="font-family:Poppins;color:black;font-size:32px;font-weight:bold;padding-top:42%;padding-left:20%">Game Development</P>
    </div>
   <div class="width">
   <img src="images/What We Do/6. Game Development.jpg">
@@ -131,25 +136,25 @@
   <img src="images/What We Do/7. Influencer Marketing.jpg">
 </div>
 <div class="width">
-  <P style="font-family:Poppins;color:#FF9100;font-size:14px">Influencer Marketing: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+  <P style="font-family:Poppins;color:#FF9100;font-size:32px;font-weight:bold;padding-top:42%;padding-left:20%">Influencer Marketing</P>
  </div>
 </section>
 
 <section id="bl" class="bg">
-  <h1 style="font-family:Poppins;font-size:27px;color:#FF9100;text-align:center;padding-top:3%">Blogs!</h1>
+  <h1 style="font-family:Poppins;font-size:27px;color:black;text-align:center;padding-top:3%">Blogs!</h1>
   <div class="width">
     <img src="images/blogs/Blog Pic Section (1).jpg">
   </div>
   <div class="width">
-    <P style="font-family:Poppins;color:#FF9100;font-size:14px">Influencer Marketing: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+    <P style="font-family:Poppins;color:#FF9100;font-size:14px"></P>
    </div>
 </section>
 
 
 <section id="cs" class="cu">
   <h1 style="font-family:Poppins;font-size:27px;color:#FF9100;text-align:center;padding-top:3%">Contact Us</h1>
-  <div class="width">
-    <P style="font-family:Poppins;color:#FF9100;font-size:14px">Influencer Marketing: We have developed total 4 websites including two MNC's in last 4 months.  </P>
+  <div class="width" >
+   <img style="padding-left:23%;padding-top:13%" src="images/contactusss111-01.png">
    </div>
   <div class="width">
     <img src="images/contactus/Contact us.jpg">
@@ -160,7 +165,7 @@
     <a href=""><img src="images/linkedin.png"></a>
       </div>
       <footer>
-        <p style="font-family:Poppins;font-size:13px;color:white;text-align:center">All Rights Received @ Arektaagency | 2020</p>
+        <p style="font-family:Poppins;font-size:13px;color:white;text-align:center">All Rights Received @ Arekta Agency | 2020</p>
       </footer> 
 </section>
   
