--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!--Clients-->
 <section id="cl" class="ct">
-  <h1 style="font-family:Poppins;font-size:27px;color: blue;text-align:center;padding-top:3%">Clients</h1>
+  <h1 style="font-family:Poppins;font-size:27px;color:#FF9100 ;text-align:center;padding-top:3%">Clients</h1>
   <div class="width">
    <img src="images/clients/Airpedia Black PNG.png">
   </div>
