--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     </div>
   </section>
-
+<main>
 <!--work-->
     <section id="wk" class="work">
       <h1 style="font-family:Poppins;font-size:29px;color:#FF9100;text-align:center;padding-top:3%">Our Work</h1>
@@ -117,7 +117,7 @@
   <img src="images/What We Do/5. Brand Identity.jpg">
 </div>
 <div class="width">
-  <P style="font-family:Poppins;color:#FF9100;font-size:32px;font-weight:bold;padding-top:22%">Band Identity & Guideline</P>
+  <P style="font-family:Poppins;color:#FF9100;font-size:32px;font-weight:bold;padding-top:22%">Brand Identity & Guideline</P>
  </div>
 </section>
 
@@ -159,15 +159,15 @@
   <div class="width">
     <img src="images/contactus/Contact us.jpg">
   </div>
-  <div style="width:5%; padding-left:1%">
+  <div class="fl" style="width:5%; padding-left:1%">
     <a href=""><img src="images/facebook (2).png"></a>
     <a href=""><img src="images/instagram-sketched.png"></a>
     <a href=""><img src="images/linkedin.png"></a>
       </div>
-      <footer>
-        <p style="font-family:Poppins;font-size:13px;color:white;text-align:center">All Rights Received @ Arekta Agency | 2020</p>
+      <footer style="background-color: black;">
+        <p style="font-family:Poppins;font-size:13px;color:white;text-align:center;width:100%">All Rights Received @ Arekta Agency | 2020</p>
       </footer> 
 </section>
-  
+ </main> 
   </body>
   </html>
