--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <li><a href="#wk">Our Work</a></li>
           <li><a href="#cl">Clients</a></li>
           <li><a href="#ww">What We Do</a></li>
-          <li><a href="#bl">Blog</a></li>
+          <li><a href="#bl">Blogs</a></li>
           <li><a href="#cs">Contact Us</a></li>
         </ul>
       </div>
@@ -41,15 +41,15 @@
     <section id="wk" class="work">
       <h1 style="font-family:Poppins;font-size:29px;color:#FF9100;text-align:center;padding-top:3%">Our Work</h1>
       <div class="width">
-       <img src="images/Our Work/Content.jpg">
+       <a href="https://www.facebook.com/arektaagency" target="_blank"><img src="images/Our Work/Content.jpg"></a>
        <P style="font-family:Poppins;color:#FF9100;font-size:22px;text-align:center">Contents</P>
       </div>
       <div class="width">
-        <img src="images/Our Work/Videos.jpg">
+        <a href="https://www.facebook.com/arektaagency" target="_blank"><img src="images/Our Work/Videos.jpg"></a>
         <P style="font-family:Poppins;color:#FF9100;font-size:22px;text-align:center">Videos</P>
       </div>
       <div class="width">
-        <img src="images/Our Work/pngtree-web-development-illustration-modern-can-be-used-for-landing-pages-web-png-image_1496220.jpg">
+        <a href="https://www.facebook.com/arektaagency" target="_blank"><img src="images/Our Work/pngtree-web-development-illustration-modern-can-be-used-for-landing-pages-web-png-image_1496220.jpg"></a>
         <P style="font-family:Poppins;color:#FF9100;font-size:22px;text-align:center">Websites</P>
       </div>
     </section>
@@ -74,7 +74,7 @@
 
 <!--What we Do-->
 <section id="ww" class="wd">
-  <h1 style="font-family:Poppins;font-size:24px;color: #FF9100;text-align:center;padding-top:3%">What We DO?</h1>
+  <h1 style="font-family:Poppins;font-size:24px;color: #FF9100;text-align:center;padding-top:3%">What We Do</h1>
       <div class="width">
        <img src="images/What We Do/1. Wed Development & Design.jpg">
       </div>
@@ -141,7 +141,7 @@
 </section>
 
 <section id="bl" class="bg">
-  <h1 style="font-family:Poppins;font-size:27px;color:black;text-align:center;padding-top:3%">Blogs!</h1>
+  <h1 style="font-family:Poppins;font-size:27px;color:black;text-align:center;padding-top:3%">Blogs</h1>
   <div class="width">
     <img src="images/blogs/Blog Pic Section (1).jpg">
   </div>
